Fix root advancement localisations and rename all advancement translation keys to bring them in line with everything else

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -213,56 +213,56 @@ entity.ebwizardry:lightning_pulse.name=Lightning Pulse
 itemGroup.ebwizardry=Wizardry
 itemGroup.ebwizardryspells=Spells
 
-achievement.root=Wizardry
-achievement.root.desc=Advancements
-achievement.crystal=A Curious Crystal...
-achievement.crystal.desc=Mine a magic crystal
-achievement.arcane_initiate=Arcane Initiate
-achievement.arcane_initiate.desc=Craft a magic wand with a gold nugget, a stick and a magic crystal
-achievement.apprentice=Wizard's Apprentice
-achievement.apprentice.desc=Use a tome of arcana to upgrade your wand
-achievement.master=Arcane Master
-achievement.master.desc=Obtain a master wand
-achievement.all_spells=Mage of All Trades
-achievement.all_spells.desc=Cast every single spell in the game
-achievement.wizard_trade=Magic Dealing
-achievement.wizard_trade.desc=Purchase an item from a wizard
-achievement.buy_master_spell=Knowledge is Power
-achievement.buy_master_spell.desc=Purchase a master spell from a wizard
-achievement.freeze_blaze=Not So Hot Now
-achievement.freeze_blaze.desc=Freeze a blaze solid
-achievement.charge_creeper=It's Gonna Blow
-achievement.charge_creeper.desc='Accidentally' charge a creeper
-achievement.frankenstein=Frankenstein
-achievement.frankenstein.desc=Turn a pig into a zombie pigman using the lightning bolt spell
-achievement.special_upgrade=Arcane Tinkering
-achievement.special_upgrade.desc=Apply a special upgrade to a wand
-achievement.craft_flask=It's Magic, Bottled!
-achievement.craft_flask.desc=Craft a mana flask
-achievement.elemental=Elemental
-achievement.elemental.desc=Obtain an elemental wand
-achievement.armour_set=Now You're a Proper Wizard
-achievement.armour_set.desc=Craft and equip a full set of wizard armor
-achievement.legendary=Legendary
-achievement.legendary.desc=Obtain a piece of legendary wizard armor
-achievement.self_destruct=That Backfired
-achievement.self_destruct.desc=Get killed by your own magic
-achievement.pig_tornado=Not Again...
-achievement.pig_tornado.desc=Ride a pig into a tornado
-achievement.jam_wizard=Jamming Session
-achievement.jam_wizard.desc=Use the arcane jammer spell on a wizard
-achievement.slime_skeleton=Sticky Situation
-achievement.slime_skeleton.desc=Engulf a skeleton in slime
-achievement.anger_wizard=You'll Regret That
-achievement.anger_wizard.desc=Make a wizard angry
-achievement.defeat_evil_wizard=Righteousness
-achievement.defeat_evil_wizard.desc=Defeat an evil wizard
-achievement.max_out_wand=Fully Equipped
-achievement.max_out_wand.desc=Apply the maximum number of upgrades to a master wand
-achievement.element_master=Element Mastery
-achievement.element_master.desc=Cast all the spells of any element
-achievement.identify_spell=Arcane Appraisal
-achievement.identify_spell.desc=Use a scroll of identification to identify a spell book or scroll
+advancement.wizardry:root=Wizardry
+advancement.wizardry:root.desc=A wizard's journey to mastering the arcane
+advancement.wizardry:crystal=A Curious Crystal...
+advancement.wizardry:crystal.desc=Mine a magic crystal
+advancement.wizardry:arcane_initiate=Arcane Initiate
+advancement.wizardry:arcane_initiate.desc=Craft a magic wand with a gold nugget, a stick and a magic crystal
+advancement.wizardry:apprentice=Wizard's Apprentice
+advancement.wizardry:apprentice.desc=Use a tome of arcana to upgrade your wand
+advancement.wizardry:master=Arcane Master
+advancement.wizardry:master.desc=Obtain a master wand
+advancement.wizardry:all_spells=Mage of All Trades
+advancement.wizardry:all_spells.desc=Cast every single spell in the game
+advancement.wizardry:wizard_trade=Magic Dealing
+advancement.wizardry:wizard_trade.desc=Purchase an item from a wizard
+advancement.wizardry:buy_master_spell=Knowledge is Power
+advancement.wizardry:buy_master_spell.desc=Purchase a master spell from a wizard
+advancement.wizardry:freeze_blaze=Not So Hot Now
+advancement.wizardry:freeze_blaze.desc=Freeze a blaze solid
+advancement.wizardry:charge_creeper=It's Gonna Blow
+advancement.wizardry:charge_creeper.desc='Accidentally' charge a creeper
+advancement.wizardry:frankenstein=Frankenstein
+advancement.wizardry:frankenstein.desc=Turn a pig into a zombie pigman using the lightning bolt spell
+advancement.wizardry:special_upgrade=Arcane Tinkering
+advancement.wizardry:special_upgrade.desc=Apply a special upgrade to a wand
+advancement.wizardry:craft_flask=It's Magic, Bottled!
+advancement.wizardry:craft_flask.desc=Craft a mana flask
+advancement.wizardry:elemental=Elemental
+advancement.wizardry:elemental.desc=Obtain an elemental wand
+advancement.wizardry:armour_set=Now You're a Proper Wizard
+advancement.wizardry:armour_set.desc=Craft and equip a full set of wizard armor
+advancement.wizardry:legendary=Legendary
+advancement.wizardry:legendary.desc=Obtain a piece of legendary wizard armor
+advancement.wizardry:self_destruct=That Backfired
+advancement.wizardry:self_destruct.desc=Get killed by your own magic
+advancement.wizardry:pig_tornado=Not Again...
+advancement.wizardry:pig_tornado.desc=Ride a pig into a tornado
+advancement.wizardry:jam_wizard=Jamming Session
+advancement.wizardry:jam_wizard.desc=Use the arcane jammer spell on a wizard
+advancement.wizardry:slime_skeleton=Sticky Situation
+advancement.wizardry:slime_skeleton.desc=Engulf a skeleton in slime
+advancement.wizardry:anger_wizard=You'll Regret That
+advancement.wizardry:anger_wizard.desc=Make a wizard angry
+advancement.wizardry:defeat_evil_wizard=Righteousness
+advancement.wizardry:defeat_evil_wizard.desc=Defeat an evil wizard
+advancement.wizardry:max_out_wand=Fully Equipped
+advancement.wizardry:max_out_wand.desc=Apply the maximum number of upgrades to a master wand
+advancement.wizardry:element_master=Element Mastery
+advancement.wizardry:element_master.desc=Cast all the spells of any element
+advancement.wizardry:identify_spell=Arcane Appraisal
+advancement.wizardry:identify_spell.desc=Use a scroll of identification to identify a spell book or scroll
 
 tile.ebwizardry:transportation_stone.confirm=You will now be returned here upon casting %1$s
 tile.ebwizardry:transportation_stone.invalid=You must make a circle with 8 stones of transportation first!
