--- a/src/main/resources/assets/ebwizardry/lang/es_es.lang
+++ b/src/main/resources/assets/ebwizardry/lang/es_es.lang
@@ -212,56 +212,56 @@ entity.ebwizardry:lightning_pulse.name=Pulso de Relampago
 item_group.ebwizardry=Wizardry
 item_group.wizardryspells=Hechizos de Wizardry
 
-achievement.root=Wizardry
-achievement.root.desc=Avances
-achievement.crystal=Un Cristral Curioso...
-achievement.crystal.desc=Pica un Cristal Magico
-achievement.arcane_initiate=Inicio Arcano
-achievement.arcane_initiate.desc=Craftea una varita magica con una pepita de oro, un palo y un cristal magico
-achievement.apprentice=Aprendiz de Mago
-achievement.apprentice.desc=Usa un tomo de lo arcano para mejorar tu varita
-achievement.master=Maestro Arcano
-achievement.master.desc=Obten una varita de maestro
-achievement.all_spells=Mago de Todos los Oficios
-achievement.all_spells.desc=Lanza todos los hechizos disponibles
-achievement.wizard_trade=Comercio Magico
-achievement.wizard_trade.desc=Compra un objeto a un mago
-achievement.buy_master_spell=El Conocimiento es Poder
-achievement.buy_master_spell.desc=Compra un hechizo maestro a un mago
-achievement.freeze_blaze=Ya No Estas Tan Caliente
-achievement.freeze_blaze.desc=Congela a un blaze
-achievement.charge_creeper=Va a Explotar!!
-achievement.charge_creeper.desc='Accidentalmente' carga un creeper
-achievement.frankenstein=Frankenstein
-achievement.frankenstein.desc=Convierte a un cerdo en un hombrecerdo zombi usando el hechizo de rayo
-achievement.special_upgrade=Remiendo Arcano
-achievement.special_upgrade.desc=Aplica una mejora a una varita
-achievement.craft_flask=Es Magia, Embotellada!
-achievement.craft_flask.desc=Craftea un frasco de mana
-achievement.elemental=Elemental
-achievement.elemental.desc=Obten una varita elemental
-achievement.armour_set=Now Eres un Mago Apropiado
-achievement.armour_set.desc=Craftea y equipa el set completo de armadura de mago
-achievement.legendary=Legendario
-achievement.legendary.desc=Obten una pieza de armadura de mago legendaria
-achievement.self_destruct=Tiro por la culata
-achievement.self_destruct.desc=Muere por tu propia magia
-achievement.pig_tornado=No De Nuevo...
-achievement.pig_tornado.desc=Monta un cerdo hacia un tornado
-achievement.jam_wizard=Sesion de Interferencia
-achievement.jam_wizard.desc=Usa el hechizo arcano de interferencia en un mago
-achievement.slime_skeleton=Situacion Pegajosa
-achievement.slime_skeleton.desc=Sumerge un esqueleto en slime
-achievement.anger_wizard=Te Arrepentiras de Eso
-achievement.anger_wizard.desc=Haz que un mago se enoje
-achievement.defeat_evil_wizard=Justicia
-achievement.defeat_evil_wizard.desc=Derrota a un mago malvado
-achievement.max_out_wand=Equipada Al Maximo!
-achievement.max_out_wand.desc=Aplica el maximo numero de mejoras a una varita maestra
-achievement.element_master=Maestria Elemental
-achievement.element_master.desc=Lanza todos los hechizos de cualquier elemento
-achievement.identify_spell=Apreciacion Arcana
-achievement.identify_spell.desc=Usa un pergamino de la identificacion para identificar un libro de hechizos o pergamino
+advancement.wizardry:root=Wizardry
+advancement.wizardry:root.desc=Avances
+advancement.wizardry:crystal=Un Cristral Curioso...
+advancement.wizardry:crystal.desc=Pica un Cristal Magico
+advancement.wizardry:arcane_initiate=Inicio Arcano
+advancement.wizardry:arcane_initiate.desc=Craftea una varita magica con una pepita de oro, un palo y un cristal magico
+advancement.wizardry:apprentice=Aprendiz de Mago
+advancement.wizardry:apprentice.desc=Usa un tomo de lo arcano para mejorar tu varita
+advancement.wizardry:master=Maestro Arcano
+advancement.wizardry:master.desc=Obten una varita de maestro
+advancement.wizardry:all_spells=Mago de Todos los Oficios
+advancement.wizardry:all_spells.desc=Lanza todos los hechizos disponibles
+advancement.wizardry:wizard_trade=Comercio Magico
+advancement.wizardry:wizard_trade.desc=Compra un objeto a un mago
+advancement.wizardry:buy_master_spell=El Conocimiento es Poder
+advancement.wizardry:buy_master_spell.desc=Compra un hechizo maestro a un mago
+advancement.wizardry:freeze_blaze=Ya No Estas Tan Caliente
+advancement.wizardry:freeze_blaze.desc=Congela a un blaze
+advancement.wizardry:charge_creeper=Va a Explotar!!
+advancement.wizardry:charge_creeper.desc='Accidentalmente' carga un creeper
+advancement.wizardry:frankenstein=Frankenstein
+advancement.wizardry:frankenstein.desc=Convierte a un cerdo en un hombrecerdo zombi usando el hechizo de rayo
+advancement.wizardry:special_upgrade=Remiendo Arcano
+advancement.wizardry:special_upgrade.desc=Aplica una mejora a una varita
+advancement.wizardry:craft_flask=Es Magia, Embotellada!
+advancement.wizardry:craft_flask.desc=Craftea un frasco de mana
+advancement.wizardry:elemental=Elemental
+advancement.wizardry:elemental.desc=Obten una varita elemental
+advancement.wizardry:armour_set=Now Eres un Mago Apropiado
+advancement.wizardry:armour_set.desc=Craftea y equipa el set completo de armadura de mago
+advancement.wizardry:legendary=Legendario
+advancement.wizardry:legendary.desc=Obten una pieza de armadura de mago legendaria
+advancement.wizardry:self_destruct=Tiro por la culata
+advancement.wizardry:self_destruct.desc=Muere por tu propia magia
+advancement.wizardry:pig_tornado=No De Nuevo...
+advancement.wizardry:pig_tornado.desc=Monta un cerdo hacia un tornado
+advancement.wizardry:jam_wizard=Sesion de Interferencia
+advancement.wizardry:jam_wizard.desc=Usa el hechizo arcano de interferencia en un mago
+advancement.wizardry:slime_skeleton=Situacion Pegajosa
+advancement.wizardry:slime_skeleton.desc=Sumerge un esqueleto en slime
+advancement.wizardry:anger_wizard=Te Arrepentiras de Eso
+advancement.wizardry:anger_wizard.desc=Haz que un mago se enoje
+advancement.wizardry:defeat_evil_wizard=Justicia
+advancement.wizardry:defeat_evil_wizard.desc=Derrota a un mago malvado
+advancement.wizardry:max_out_wand=Equipada Al Maximo!
+advancement.wizardry:max_out_wand.desc=Aplica el maximo numero de mejoras a una varita maestra
+advancement.wizardry:element_master=Maestria Elemental
+advancement.wizardry:element_master.desc=Lanza todos los hechizos de cualquier elemento
+advancement.wizardry:identify_spell=Apreciacion Arcana
+advancement.wizardry:identify_spell.desc=Usa un pergamino de la identificacion para identificar un libro de hechizos o pergamino
 
 tile.ebwizardry:transportation_stone.confirm=A partir de ahora retornaras a este lugar cuando lances %1$s
 tile.ebwizardry:transportation_stone.invalid=Primero debes hacer un circulo con 8 piedras de transportacion!
