--- a/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
@@ -189,56 +189,56 @@ entity.ebwizardry:ring_of_fire.name=Кольцо Огня
 item_group.ebwizardry=Волшебство
 item_group.wizardryspells=Волшебные Заклинания
 
-achievement.root=Wizardry
-achievement.root.desc=достижения
-achievement.crystal=Любопытный Кристалл...
-achievement.crystal.desc=Добудьте Магический Кристалл
-achievement.arcane_initiate=Посвящение В Магию
-achievement.arcane_initiate.desc=Создайте Волшебную Палочку Из Золотого Самородка И Магического Кристалла
-achievement.apprentice=Ученик Волшебника
-achievement.apprentice.desc=Используйте Фолиант Арканы Для Улучшения Жезла
-achievement.master=Мастер Магии
-achievement.master.desc=Получите Жезл Мастера
-achievement.all_spells=Маг Всех Профессий
-achievement.all_spells.desc=Используйте Каждое Заклинание В Игре
-achievement.wizard_trade=Магическая Сделка
-achievement.wizard_trade.desc=Купите Предмет У Волшебника
-achievement.buy_master_spell=Знание-сила
-achievement.buy_master_spell.desc=Купите заклинание мастера у волшебника
-achievement.freeze_blaze=Не Так Жарко
-achievement.freeze_blaze.desc=Заморозьте Блейза
-achievement.charge_creeper=Это Сейчас Взорвётся
-achievement.charge_creeper.desc="Случайно" Зарядите Крипира
-achievement.frankenstein=Франкенштейн
-achievement.frankenstein.desc=Привратите Свинью В Свинозомби С Помощью Молнии
-achievement.special_upgrade=Чародейское Ремесло
-achievement.special_upgrade.desc=Применить Специальное Улучшение Для Жезла
-achievement.craft_flask=Это Магия В Бутылке!
-achievement.craft_flask.desc=Создайте Ману В Бутылке
-achievement.elemental=Стихии
-achievement.elemental.desc=Получите Стихийный Жезл
-achievement.armour_set=Теперь Ты Настоящий Волшебник
-achievement.armour_set.desc=Создайте И Экипируйте Полный Набор Одеяния Волшебника
-achievement.legendary=Легендарный
-achievement.legendary.desc=Получите Часть Легендарного Одеяния Волшебника
-achievement.self_destruct=Обратно
-achievement.self_destruct.desc=Убейся Собственной Магией
-achievement.pig_tornado=Не Сейчас...
-achievement.pig_tornado.desc=Заедьте На Свинье В Торнадо
-achievement.max_out_wand=Полное Оснощение
-achievement.max_out_wand.desc=Примените максимальное количество улучшений к жезлу мастера
-achievement.slime_skeleton=Липкая Ситуация
-achievement.slime_skeleton.desc=Захватите скелета слизьнем
-achievement.jam_wizard=Помехи
-achievement.jam_wizard.desc=Используйте заклинание магическая глушилка на волшебнике
-achievement.identify_spell=Тайная Экспертиза
-achievement.identify_spell.desc=Используйте свиток идентификации для неизвестной книги заклинания или свитка
-achievement.element_master=Мастер Элементов
-achievement.element_master.desc=Используйте все заклинания любого элемента
-achievement.anger_wizard=Ты пожалеешь об этом
-achievement.anger_wizard.desc=Разозлите волшебника
-achievement.defeat_evil_wizard=Праведность
-achievement.defeat_evil_wizard.desc=Победите злого волшебника
+advancement.wizardry:root=Wizardry
+advancement.wizardry:root.desc=достижения
+advancement.wizardry:crystal=Любопытный Кристалл...
+advancement.wizardry:crystal.desc=Добудьте Магический Кристалл
+advancement.wizardry:arcane_initiate=Посвящение В Магию
+advancement.wizardry:arcane_initiate.desc=Создайте Волшебную Палочку Из Золотого Самородка И Магического Кристалла
+advancement.wizardry:apprentice=Ученик Волшебника
+advancement.wizardry:apprentice.desc=Используйте Фолиант Арканы Для Улучшения Жезла
+advancement.wizardry:master=Мастер Магии
+advancement.wizardry:master.desc=Получите Жезл Мастера
+advancement.wizardry:all_spells=Маг Всех Профессий
+advancement.wizardry:all_spells.desc=Используйте Каждое Заклинание В Игре
+advancement.wizardry:wizard_trade=Магическая Сделка
+advancement.wizardry:wizard_trade.desc=Купите Предмет У Волшебника
+advancement.wizardry:buy_master_spell=Знание-сила
+advancement.wizardry:buy_master_spell.desc=Купите заклинание мастера у волшебника
+advancement.wizardry:freeze_blaze=Не Так Жарко
+advancement.wizardry:freeze_blaze.desc=Заморозьте Блейза
+advancement.wizardry:charge_creeper=Это Сейчас Взорвётся
+advancement.wizardry:charge_creeper.desc="Случайно" Зарядите Крипира
+advancement.wizardry:frankenstein=Франкенштейн
+advancement.wizardry:frankenstein.desc=Привратите Свинью В Свинозомби С Помощью Молнии
+advancement.wizardry:special_upgrade=Чародейское Ремесло
+advancement.wizardry:special_upgrade.desc=Применить Специальное Улучшение Для Жезла
+advancement.wizardry:craft_flask=Это Магия В Бутылке!
+advancement.wizardry:craft_flask.desc=Создайте Ману В Бутылке
+advancement.wizardry:elemental=Стихии
+advancement.wizardry:elemental.desc=Получите Стихийный Жезл
+advancement.wizardry:armour_set=Теперь Ты Настоящий Волшебник
+advancement.wizardry:armour_set.desc=Создайте И Экипируйте Полный Набор Одеяния Волшебника
+advancement.wizardry:legendary=Легендарный
+advancement.wizardry:legendary.desc=Получите Часть Легендарного Одеяния Волшебника
+advancement.wizardry:self_destruct=Обратно
+advancement.wizardry:self_destruct.desc=Убейся Собственной Магией
+advancement.wizardry:pig_tornado=Не Сейчас...
+advancement.wizardry:pig_tornado.desc=Заедьте На Свинье В Торнадо
+advancement.wizardry:max_out_wand=Полное Оснощение
+advancement.wizardry:max_out_wand.desc=Примените максимальное количество улучшений к жезлу мастера
+advancement.wizardry:slime_skeleton=Липкая Ситуация
+advancement.wizardry:slime_skeleton.desc=Захватите скелета слизьнем
+advancement.wizardry:jam_wizard=Помехи
+advancement.wizardry:jam_wizard.desc=Используйте заклинание магическая глушилка на волшебнике
+advancement.wizardry:identify_spell=Тайная Экспертиза
+advancement.wizardry:identify_spell.desc=Используйте свиток идентификации для неизвестной книги заклинания или свитка
+advancement.wizardry:element_master=Мастер Элементов
+advancement.wizardry:element_master.desc=Используйте все заклинания любого элемента
+advancement.wizardry:anger_wizard=Ты пожалеешь об этом
+advancement.wizardry:anger_wizard.desc=Разозлите волшебника
+advancement.wizardry:defeat_evil_wizard=Праведность
+advancement.wizardry:defeat_evil_wizard.desc=Победите злого волшебника
 
 
 
