--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -698,6 +698,7 @@ config.ebwizardry.discoverspell_command_name=Discover Spell Command Name
 config.ebwizardry.ally_command_name=Set Ally Command Name
 config.ebwizardry.allies_command_name=View Allies Command Name
 config.ebwizardry.mind_control_targets_blacklist=Mind Control Targets Blacklist
+config.ebwizardry.evil_wizard_dimensions=Evil Wizard Dimensions
 
 config.ebwizardry.mobs_immune_to_fire=Mobs Immune To Fire
 config.ebwizardry.mobs_immune_to_ice=Mobs Immune To Ice
@@ -733,6 +734,7 @@ config.ebwizardry.discoverspell_command_name.tooltip=The name of the /discoversp
 config.ebwizardry.ally_command_name.tooltip=The name of the /ally command. This is what you type directly after the /; for example if this was set to 'magic' then instead of typing /ally you would type /magic instead.
 config.ebwizardry.allies_command_name.tooltip=The name of the /allies command. This is what you type directly after the /; for example if this was set to 'magic' then instead of typing /allies you would type /magic instead.
 config.ebwizardry.mind_control_targets_blacklist.tooltip=List of names of entities which cannot be mind controlled, in addition to the defaults. Add creatures to this list if allowing them to be mind-controlled causes problems or could be exploited. Entity names are not case sensitive. For mod entities, prefix with the mod ID (e.g. ebwizardry:wizard).
+config.ebwizardry.evil_wizard_dimensions.tooltip=List of dimension ids in which evil wizards can spawn.
 
 config.ebwizardry.mobs_immune_to_fire.tooltip=List of names of entities that are immune to fire, in addition to the defaults. Add mod creatures to this list if you want them to be immune to fire magic and they aren't already. Entity names are not case sensitive. For mod entities, prefix with the mod ID (e.g. ebwizardry.wizard).
 config.ebwizardry.mobs_immune_to_ice.tooltip=List of names of entities that are immune to ice, in addition to the defaults. Add mod creatures to this list if you want them to be immune to ice magic and they aren't already. Entity names are not case sensitive. For mod entities, prefix with the mod ID (e.g. ebwizardry.wizard).
