--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -710,6 +710,7 @@ config.ebwizardry.cast_command_multiplier_limit=Cast Command Multiplier Limit
 config.ebwizardry.summoned_creature_targets_whitelist=Summoned Creature Target Whitelist
 config.ebwizardry.summoned_creature_targets_blacklist=Summoned Creature Target Blacklist
 config.ebwizardry.spell_hud_position=Spell HUD Position
+config.ebwizardry.spell_hud_skin=Spell HUD Skin
 config.ebwizardry.cast_command_name=Cast Spell Command Name
 config.ebwizardry.discoverspell_command_name=Discover Spell Command Name
 config.ebwizardry.ally_command_name=Set Ally Command Name
@@ -746,6 +747,7 @@ config.ebwizardry.cast_command_multiplier_limit.tooltip=Upper limit for the mult
 config.ebwizardry.summoned_creature_targets_whitelist.tooltip=List of names of entities which summoned creatures and wizards are allowed to attack, in addition to the defaults. Add mod creatures to this list if you want summoned creatures to attack them and they aren't already doing so. Entity names are not case sensitive. For mod entities, prefix with the mod ID (e.g. ebwizardry:wizard).
 config.ebwizardry.summoned_creature_targets_blacklist.tooltip=List of names of entities which summoned creatures and wizards are specifically not allowed to attack, overriding the defaults and the whitelist. Add creatures to this list if allowing them to be attacked causes problems or is too destructive (removing creepers from this list is done at your own risk!). Entity names are not case sensitive. For mod entities, prefix with the mod ID (e.g. ebwizardry:wizard).
 config.ebwizardry.spell_hud_position.tooltip=The position of the spell HUD.
+config.ebwizardry.spell_hud_skin.tooltip=Change the look of the spell HUD...
 config.ebwizardry.cast_command_name.tooltip=The name of the /cast command. This is what you type directly after the /; for example if this was set to 'magic' then instead of typing /cast you would type /magic instead.
 config.ebwizardry.discoverspell_command_name.tooltip=The name of the /discoverspell command. This is what you type directly after the /; for example if this was set to 'magic' then instead of typing /discoverspell you would type /magic instead.
 config.ebwizardry.ally_command_name.tooltip=The name of the /ally command. This is what you type directly after the /; for example if this was set to 'magic' then instead of typing /ally you would type /magic instead.
